// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing with renders renders with loading 1`] = `
<div>
  <h1>
    Submitting...
  </h1>
</div>
`;

exports[`Testing with renders should delete with success message 1`] = `
<p>
  Success!
</p>
`;

exports[`Testing with renders should updated the password with success message 1`] = `
<div>
  <h1>
    Successfully submitted!
  </h1>
</div>
`;
